# aws-mcp-server

./: .gitignore
.github/workflows/: ci-ecr-aws-s3-mcp-server.yml
src/aws-s3-mcp-server/: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  uv-requirements.txt
src/aws-s3-mcp-server/awslabs/aws_s3_mcp_server/: __init__.py  consts.py  server.py  utils.py
src/aws-s3-mcp-server/awslabs/aws_s3_mcp_server/tools/: __init__.py  s3.py
